# gh-page-backend-hakyll

./: .gitignore  .prettierrc  AGENTS.md  README.md  cabal.project  flake.nix  hie.yaml
.github/workflows/: main.yml
scripts/: deploy.sh
src/: index.html
src/css/: code.css  default.css
src/js/: script.js
src/pages/: about.en.md  about.md  whoami.en.md  whoami.md
src/posts/CW-Faberge-easter-eggs-crush-test/: index.en.md  index.md
src/posts/Docker容器访问IPv6问题/: index.en.md  index.md
src/posts/Gentoo-Minecraft-1-12-OpenGL-error/: index.en.md  index.md
src/posts/Knot-tying: 惰性求值下 KMP 算法的自递归之美/: index.en.md  index.md
src/posts/RPI3B-OpenWrt坑点/: index.en.md  index.md
src/posts/反演/: index.en.md  index.md
src/posts/洛谷-P1383-高级打字机/: index.en.md  index.md
src/posts/齐次坐标、线性代数与圆锥曲线-1/: homogeneous-conic-3d.geogebra  index.en.md  index.md
src/templates/: archive.html  default.html  page.html  taxonomy.html
ssg/: ssg.cabal
ssg/src/: Main.hs
ssg/src/Site/: Config.hs  Context.hs  Feed.hs  GeoGebra.hs  Pandoc.hs  Routes.hs  Rules.hs
