cabal-version:       3.6

name:                ssg
version:             0.1.0.0
build-type:          Simple
license:             BSD-3-Clause
license-file:        LICENSE

executable hakyll-site
  default-language:  GHC2021
  main-is:           Main.hs
  other-modules:     Site.Config
                   , Site.Context
                   , Site.Feed
                   , Site.GeoGebra
                   , Site.Pandoc
                   , Site.Rules
                   , Site.Routes
  hs-source-dirs:    src
  build-depends:     base == 4.*
                   , hakyll == 4.16.*
                   , filepath >= 1.0
                   , pandoc >= 2.11
                   , pandoc-types >= 1.22
                   , raw-strings-qq >= 1.1
                   , slugger >= 0.1.0.2
                   , text >= 1 && < 3
  ghc-options:     -Wall
                   -Wcompat
                   -Widentities
                   -Wincomplete-record-updates
                   -Wincomplete-uni-patterns
                   -Wpartial-fields
                   -Wredundant-constraints
                   -O2
                   -threaded
                   -rtsopts
                   -with-rtsopts=-N
